src/test/resources/org/nest/spl/_cocos/valid/varNotDefined.simple
module org.nest.spl._cocos.varNotDefined
x real = 3
a integer
for a in 1 ... 10 step 1:
# blaa
end
xx boolean
if xx:
end

while xx:
end
steps(1ms)
