src/test/resources/org/nest/spl/_cocos/invalid/varNotDefined.simple
module org.nest.spl._cocos.varNotDefined
x real = 3 * y # ERROR: y not defined

for a in aa ... aaa step 1: # 3 ERROR: a not defined
# blaa
end

if xx: # ERROR: xx not defined
end

if xxx: # ERROR xxx is undefined
elif yyy: # ERROR
end

while yy: # ERROR: yy not defined
end

steps(t_ref) # ERROR: t_ref not defined
